--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Of British</title>
     <link rel="stylesheet" href="./assets/css/plugin.css">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./assets/js/tailwind.js"></script>
     <script src="./assets/js/tailwind-config.js"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -72,7 +72,7 @@
         <section class="hero-section">
             <div class="hero-section-wraper">
                 <div class="banner-wraper">
-                    <div class="banner-slider-wraper global-slick-init" data-infinite="true" data-autoplay="false" data-speed="1000" data-dots="true" data-arrows="true" data-prevarrow="<div class='prev-icon slick-arrow'><i class='fa-solid fa-arrow-left'></i></div>" data-nextarrow="<div class='next-icon slick-arrow'><i class='fa-solid fa-arrow-right'></i></div>" data-appendarrows=".slider-arrwos" data-appenddots=".slider-dots">
+                    <div class="banner-slider-wraper global-slick-init" data-infinite="true" data-autoplay="true" data-speed="1000" data-dots="true" data-arrows="true" data-prevarrow="<div class='prev-icon slick-arrow'><i class='fa-solid fa-arrow-left'></i></div>" data-nextarrow="<div class='next-icon slick-arrow'><i class='fa-solid fa-arrow-right'></i></div>" data-appendarrows=".slider-arrwos" data-appenddots=".slider-dots">
                         <div class="banner-slider-item mobile:h-[581px] h-[400px] w-[100%] relative">
                             <img src="./assets/images/slide-item.png" alt="slider" class="h-[100%] w-[100%] object-cover">
                             <div class="container-1440">
@@ -138,7 +138,7 @@
                                 <p class="tect-color12 leading-[1.5] mt-[10px]">Share your product recommendations with friends and family and earn commissions for every sale. It's easy, fun, and rewarding!</p>
                             </div>
                             <div class="btn-wraper flex flex-wrap gap-[10px] mobile:flex-row flex-col *:w-[100%] *:p-[15px_17px] *:rounded-[5px] *:flex-1 *:text-center items-center flex-wrap">
-                                <a href="javascript:void(0)" class="text-[#ffffff] bg-color5">Join as a Recommender</a>
+                                <a href="./signup-as.html" class="text-[#ffffff] bg-color5">Join as a Recommender</a>
                                 <a href="javascript:void(0)" class="text-color5 bg-[#ffffff]">Learn More</a>
                             </div>
                         </div>
@@ -148,7 +148,7 @@
         </section> 
         <section class="all-uder-one-roof md:py-[140px] mobile:py-[60px] py-[40px]">
             <div class="container-1440">
-                <h2 class="max-w-[560px] mx-auto text-center md:text-[2.5rem] sm:text-[2rem] text-[1.7rem] leading-[1.12] font-[300] text-color12">Bringing Britain’s Finest Together – All Under One Roof.</h2>
+                <h2 class="max-w-[560px] mx-auto text-center md:text-[2.5rem] sm:text-[2rem] text-[1.7rem] leading-[1.12] font-[300] text-color12">Your Destination for the Best British Products – All in One Place.</h2>
                 <p class="lato text-center text-[0.75rem] font-[300] text-color12 mt-[10px]">Best Of British</p>
             </div>
         </section>
@@ -166,7 +166,7 @@
                                 <p class="tect-color12 leading-[1.5] mt-[10px]">Reach more customers by allowing recommenders to share your products with their network. Increase visibility, sales, and brand recognition.</p>
                             </div>
                             <div class="btn-wraper flex flex-wrap gap-[10px] mobile:flex-row flex-col *:w-[100%] *:p-[15px_17px] *:rounded-[5px] *:flex-1 *:text-center items-center flex-wrap">
-                                <a href="javascript:void(0)" class="text-[#ffffff] bg-color5">Join as a Seller</a>
+                                <a href="./signup-as.html" class="text-[#ffffff] bg-color5">Join as a Seller</a>
                                 <a href="javascript:void(0)" class="text-color5 bg-[#ffffff]">Learn More</a>
                             </div>
                         </div>
@@ -196,7 +196,7 @@
                                     Connect with sellers, ask questions, and enjoy a seamless shopping experience.</p>
                             </div>
                             <div class="btn-wraper flex flex-wrap gap-[10px] mobile:flex-row flex-col *:w-[100%] *:p-[15px_17px] *:rounded-[5px] *:flex-1 *:text-center items-center flex-wrap">
-                                <a href="javascript:void(0)" class="text-[#ffffff] bg-color5">Start Shopping Now</a>
+                                <a href="./signup-as.html" class="text-[#ffffff] bg-color5">Start Shopping Now</a>
                                 <a href="javascript:void(0)" class="text-color5 bg-[#ffffff]">Learn More</a>
                             </div>
                         </div>
