--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Of British</title>
     <link rel="stylesheet" href="./assets/css/plugin.css">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./assets/js/tailwind.js"></script>
     <script src="./assets/js/tailwind-config.js"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -16,7 +16,9 @@
             <div class="left-part ">
                 <div class="content-wraper max-w-[760px] px-[20px] mx-auto pt-[60px]">
                     <div class="logo-image">
-                        <img src="./assets/images/logo.png" alt="logo">
+                        <a href="index.html">
+                            <img src="./assets/images/logo.png" alt="logo">
+                        </a>
                     </div>
                     <div class="login-wraper-inner max-w-[450px] mx-auto sm:mt-[120px] mt-[60px]">
                         <h3 class="heading dm-serif 
