--- a/payment-setup.html
+++ b/payment-setup.html
@@ -15,7 +15,7 @@
         <div class="max-w-[1660px] px-5 mx-auto py-[60px] z-[-1] identity-wraper top-0 ">
             <div class="logo-image">
                 <a href="index.html">
-                    <img src="./assets/images/logo.png" alt="logo">
+                    <img src="./assets/images/Logo.png" alt="logo">
                 </a>
             </div>
             <div class="tell-about-store max-w-[652px] mx-auto mt-[80px]">
