--- a/signup-as.html
+++ b/signup-as.html
@@ -16,7 +16,7 @@
         <div class="max-w-[1240px] px-5 mx-auto pt-[60px] z-[-1] identity-wraper top-0 ">
             <div class="logo-image">
                 <a href="index.html">
-                    <img src="./assets/images/logo.png" alt="logo">
+                    <img src="./assets/images/Logo.png" alt="logo">
                 </a>
             </div>
             <div class="signup-as-wraper max-w-[450px] mx-auto mt-8">
@@ -57,7 +57,7 @@
                     <div class="content-wraper max-w-[760px] px-[20px] mx-auto pt-[60px]">
                         <div class="logo-image">
                             <a href="index.html">
-                                <img src="./assets/images/logo.png" alt="logo">
+                                <img src="./assets/images/Logo.png" alt="logo">
                             </a>
                         </div>
                         <div class="login-wraper-inner max-w-[450px] mx-auto sm:mt-[120px] mt-[60px]">
