--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
                 <div class="content-wraper max-w-[760px] px-[20px] mx-auto pt-[60px]">
                     <div class="logo-image">
                         <a href="index.html">
-                            <img src="./assets/images/logo.png" alt="logo">
+                            <img src="./assets/images/Logo.png" alt="logo">
                         </a>
                     </div>
                     <div class="login-wraper-inner max-w-[450px] mx-auto sm:mt-[120px] mt-[60px]">
