--- a/dashbord-home.html
+++ b/dashbord-home.html
@@ -25,17 +25,17 @@
                    </div>
                    <ul class="menu flex flex-col gap-[24px] mt-[20px]">
                         <li>
-                            <a href="javscript:void(0)" class="group active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                            <a href="javscript:void(0)" class="group *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                 <span>
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M16 22V18C16 15.7909 14.2091 14 12 14C9.79086 14 8 15.7909 8 18V22M21 10.1503V17.9668C21 20.1943 19.2091 22 17 22H7C4.79086 22 3 20.1943 3 17.9668V10.1503C3 8.93937 3.53964 7.7925 4.46986 7.02652L9.46986 2.90935C10.9423 1.69689 13.0577 1.69688 14.5301 2.90935L19.5301 7.02652C20.4604 7.7925 21 8.93937 21 10.1503Z" stroke="#0F172A" stroke-width="1.5"/>
                                     </svg>
                                 </span>
-                                <span class="">Dashboard</span>
+                                <span class="group-[.active]:opacity-[1]">Dashboard</span>
                             </a>
                         </li>
                         <li>
-                            <a href="javscript:void(0)" class="flex items-center gap-[10px] *:text-color8 *:text-[16px]">
+                            <a href="javscript:void(0)" class=" *:opacity-[0.7] flex items-center gap-[10px] *:text-color8 *:text-[16px]">
                                 <span>
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M2 7C2 4.79086 3.79086 3 6 3H18C20.2091 3 22 4.79086 22 7V17C22 19.2091 20.2091 21 18 21H6C3.79086 21 2 19.2091 2 17V7Z" stroke="#0F172A" stroke-width="1.5" stroke-linejoin="round"/>
