landing page done

--- a/about.html
+++ b/about.html
@@ -23,11 +23,11 @@
                     </div>
                     <div class="navbar-collapse group bg-[#fff] hidden opacity-0 md:opacity-100 md:block absolute top-[calc(100%+40px)] left-0 right-0  md:static md:z-auto z-[1] md:transition-none transition-all duration-[.8s] ease-in-out">
                         <ul class="navbar-nav flex md:flex-row flex-col tracking-[1px] flex-wrap *:items-center *:flex md:py-[0px] py-[12px] md:gap-[0px] gap-[12px]">
-                            <li class="group/home menu-item active">
+                            <li class="group/home menu-item">
                                 <a href="./index.html" class="px-[12px] relative text-color5 transition-all duration-[.1s]  group-[.active]/home:font-[600] group-hover/home:font-[600]">Home<span class="absolute opacity-0 h-[1px] transition-all duration-[.3s] bg-color5 bottom-[3px] left-[12px] right-[12px] group-[.active]/home:opacity-100 group-hover/home:opacity-100"></span></a>
                                 <i class="fa-solid fa-angle-down text-color5 me-2 leading-[1.5] hidden group-[.menu-item-has-children]:inline-block"></i>
                             </li>
-                            <li class="group/about menu-item">
+                            <li class="group/about menu-item active">
                                 <a href="./about.html" class="px-[12px] relative text-color5 transition-all duration-[.1s]  group-[.active]/about:font-[600] group-hover/about:font-[600]">About<span class="absolute opacity-0 h-[1px] transition-all duration-[.3s] bg-color5 bottom-[3px] left-[12px] right-[12px] group-[.active]/about:opacity-100 group-hover/about:opacity-100"></span></a>
                                 <i class="fa-solid fa-angle-down text-color5 me-2 leading-[1.5] hidden group-[.menu-item-has-children]:inline-block"></i>
                             </li>
@@ -69,137 +69,46 @@
         </nav>
     </header>
     <div class="main bg-[#FFFFFD]">
-        <section class="hero-section">
-            <div class="hero-section-wraper">
-                <div class="banner-wraper">
-                    <div class="banner-slider-wraper global-slick-init" data-infinite="true" data-autoplay="true" data-speed="1000" data-dots="true" data-arrows="true" data-prevarrow="<div class='prev-icon slick-arrow'><i class='fa-solid fa-arrow-left'></i></div>" data-nextarrow="<div class='next-icon slick-arrow'><i class='fa-solid fa-arrow-right'></i></div>" data-appendarrows=".slider-arrwos" data-appenddots=".slider-dots">
-                        <div class="banner-slider-item mobile:h-[581px] h-[400px] w-[100%] relative">
-                            <img src="./assets/images/slide-item.png" alt="slider" class="h-[100%] w-[100%] object-cover">
-                            <div class="container-1440">
-                                <div class="text-part-wraper absolute top-[50%] translate-y-[-50%]">
-                                    <div class="text-part max-w-[472px]">
-                                        <h1 class="font-[700] mobile:text-[2.5rem] text-[1.8rem] text-color1 italic leading-[1.13] tracking-[1px]">Discover Here the very Best of British Merchandise & Products</h1>
-                                        <p class="text-[1.25rem] text-color1 my-[17px] lato">All together at your fingertips in one place.</p>
-                                        <div class="btn-wraper">
-                                            <a href="javascript:void(0)" class="btn btn-1 text-[#ffffff] text-center font-[600] py-[14px] px-[20px] bg-color6 rounded-[5px] w-[228px]">Join Us Now</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="banner-slider-item mobile:h-[581px] h-[400px] w-[100%] relative">
-                            <img src="./assets/images/slide-item.png" alt="slider" class="h-[100%] w-[100%] object-cover">
-                            <div class="container-1440">
-                                <div class="text-part-wraper absolute top-[50%] translate-y-[-50%]">
-                                    <div class="text-part max-w-[472px]">
-                                        <h1 class="font-[700] mobile:text-[2.5rem] text-[1.8rem] text-color1 italic leading-[1.13] tracking-[1px]">Discover Here the very Best of British Merchandise & Products</h1>
-                                        <p class="text-[1.25rem] text-color1 my-[17px] lato">All together at your fingertips in one place.</p>
-                                        <div class="btn-wraper">
-                                            <a href="javascript:void(0)" class="btn btn-1 text-[#ffffff] text-center font-[600] py-[14px] px-[20px] bg-color6 rounded-[5px] w-[228px]">Join Us Now</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="banner-slider-item mobile:h-[581px] h-[400px] w-[100%] relative">
-                            <img src="./assets/images/slide-item.png" alt="slider" class="h-[100%] w-[100%] object-cover">
-                            <div class="container-1440">
-                                <div class="text-part-wraper absolute top-[50%] translate-y-[-50%]">
-                                    <div class="text-part max-w-[472px]">
-                                        <h1 class="font-[700] mobile:text-[2.5rem] text-[1.8rem] text-color1 italic leading-[1.13] tracking-[1px]">Discover Here the very Best of British Merchandise & Products</h1>
-                                        <p class="text-[1.25rem] text-color1 my-[17px] lato">All together at your fingertips in one place.</p>
-                                        <div class="btn-wraper">
-                                            <a href="javascript:void(0)" class="btn btn-1 text-[#ffffff] text-center font-[600] py-[14px] px-[20px] bg-color6 rounded-[5px] w-[228px]">Join Us Now</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="custom-dot-with-arrow">
-                        <div class="slider-arrwos">
-                            <div class="slider-dots"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="turn-find-earning py-[32px]">
+        <section class="about-us py-[32px]">
             <div class="container-1440">
                 <div class="turn-find-earning-wraper flex flex-col md:flex-row">
                     <div class="img-part flex-1">
-                        <img src="./assets/images/sec1.png" alt="section-image">
+                        <img src="./assets/images/about-us-1.png" alt="about-us">
                     </div>
                     <div class="right-part bg-color10 flex-1 p-[24px]">
                         <div class="text-part max-w-[464px] mx-auto h-[100%] flex flex-col gap-[24px] justify-around">
                             <p class="subtitle lato text-color11 tracking-[2px]">BEST OF BRITISH</p>
                             <div>
-                                <h2 class="lg:text-[48px] sm:text-[30px] text-[24px] text-color8 leading-[1.12]">Turn Your Favourite Finds Into Earnings</h2>
-                                <p class="lato text-color12 text-[.94rem] leading-[1.5] mt-[10px]">Share your product recommendations with friends and family and earn commissions for every sale. It's easy, fun, and rewarding!</p>
-                            </div>
-                            <div class="btn-wraper flex flex-wrap gap-[10px] mobile:flex-row flex-col *:w-[100%] *:p-[15px_17px] *:rounded-[5px] *:flex-1 *:text-center items-center flex-wrap">
-                                <a href="./signup-as.html" class="text-[#ffffff] bg-color5">Join as a Recommender</a>
-                                <a href="javascript:void(0)" class="text-color5 bg-[#ffffff]">Learn More</a>
+                                <h2 class="lg:text-[48px] sm:text-[30px] text-[24px] text-color8 leading-[1.12]">About Us</h2>
+                                <p class="lato text-color12 text-[.94rem] leading-[1.5] mt-[10px] tracking-[1px] text-justify">Best of British is a unique platform designed to connect local stores with Buyers, Sellers, and Recommenders across the UK. Our goal is to bridge the gap between high-street shops and customers both near and far by leveraging the power of personal recommendations and live video shopping experiences.</p>
+                                <p class="lato text-color12 leading-[1.5] tracking-[1px] mt-[10px] text-justify">We believe in supporting small and medium-sized businesses while offering Buyers a convenient way to discover and purchase items recommended by people they trust. Whether you're a Seller looking to reach more customers, a Buyer seeking personal shopping experiences, or a recommender sharing products with friends and family, Best of British empowers you to engage in meaningful, seamless transactions.</p>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section> 
-        <section class="all-uder-one-roof md:py-[140px] mobile:py-[60px] py-[40px]">
-            <div class="container-1440">
-                <h2 class="max-w-[560px] mx-auto text-center md:text-[2.5rem] sm:text-[2rem] text-[1.7rem] leading-[1.12] font-[300] text-color12 uppercase">Your Destination for the Best British Products – All in One Place.</h2>
-                <p class="lato text-center text-[0.75rem] font-[300] text-color12 mt-[10px]">Best Of British</p>
             </div>
         </section>
-        <section class="boost-sell py-[32px]">
+        <section class="our-mission py-[32px]">
             <div class="container-1440">
-                <div class="boost-sell-wraper flex flex-col md:flex-row">
-                    <div class="img-part flex-1">
-                        <img src="./assets/images/boostsell.png" alt="section-image">
-                    </div>
+                <div class="turn-find-earning-wraper flex flex-col md:flex-row">
                     <div class="right-part bg-color10 flex-1 p-[24px]">
                         <div class="text-part max-w-[464px] mx-auto h-[100%] flex flex-col gap-[24px] justify-around">
                             <p class="subtitle lato text-color11 tracking-[2px]">BEST OF BRITISH</p>
                             <div>
-                                <h2 class="lg:text-[48px] sm:text-[30px] text-[24px] text-color8 leading-[1.12]">Boost Your Sales with the Power of Recommendations</h2>
-                                <p class="lato text-color12 text-[.94rem] leading-[1.5] mt-[10px]">Reach more customers by allowing recommenders to share your products with their network. Increase visibility, sales, and brand recognition.</p>
-                            </div>
-                            <div class="btn-wraper flex flex-wrap gap-[10px] mobile:flex-row flex-col *:w-[100%] *:p-[15px_17px] *:rounded-[5px] *:flex-1 *:text-center items-center flex-wrap">
-                                <a href="./signup-as.html" class="text-[#ffffff] bg-color5">Join as a Seller</a>
-                                <a href="javascript:void(0)" class="text-color5 bg-[#ffffff]">Learn More</a>
+                                <h2 class="lg:text-[48px] sm:text-[30px] text-[24px] text-color8 leading-[1.12]">Our Mission</h2>
+                                <p class="lato text-color12 text-[.94rem] leading-[1.5] mt-[10px] text-justify">Our mission is to revitalise local commerce by providing a modern, tech-savvy platform where Buyers, Sellers, and Recommenders can thrive together.</p>
+                                <p class="lato text-color12 text-[.94rem] leading-[1.5] mt-[10px]">We aim to:</p>
+                                <ul class="lato text-justify text-color12 leading-[1.5] mt-[10px] marker:text-black list-disc pl-5 space-y-3">
+                                    <li>Empower Local Businesses: Giving high-street and independent stores tools to reach a wider audience.</li>
+                                    <li>Create Personal Connections: Allowing Buyers to experience live shopping and recommendations from people they trust.</li>
+                                    <li>Foster Community: Building a network where shoppers, Sellers, and Recommenders can support each other.</li>
+                                </ul>
+                                <p class="lato text-color12 text-[.94rem] leading-[1.5] mt-[10px]">At Best of British, we’re committed to making shopping personal, trustworthy, and community-driven while enhancing the experience for everyone involved.</p>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </section> 
-        <section class="all-uder-one-roof md:py-[140px] mobile:py-[60px] py-[40px]">
-            <div class="container-1440">
-                <h2 class="max-w-[560px] mx-auto text-center md:text-[2.5rem] sm:text-[2rem] text-[1.7rem] leading-[1.12] font-[300] text-color12 uppercase">Bringing Britain’s Finest Together – All Under One Roof.</h2>
-                <p class="lato text-center text-[0.75rem] font-[300] text-color12 mt-[10px]">Best Of British</p>
-            </div>
-        </section> 
-        <section class="shop-smarter py-[32px]">
-            <div class="container-1440">
-                <div class="shop-smarter-wraper flex flex-col md:flex-row">
                     <div class="img-part flex-1">
-                        <img src="./assets/images/shopsmarter.png" alt="section-image">
-                    </div>
-                    <div class="right-part bg-color10 flex-1 p-[24px]">
-                        <div class="text-part max-w-[464px] mx-auto h-[100%] flex flex-col gap-[24px] justify-around">
-                            <p class="subtitle lato text-color11 tracking-[2px]">BEST OF BRITISH</p>
-                            <div>
-                                <h2 class="lg:text-[48px] sm:text-[30px] text-[24px] text-color8 leading-[1.12]">Shop Smarter
-                                    with Trusted Recommendations</h2>
-                                <p class="lato text-color12 text-[.94rem] leading-[1.5] mt-[10px]">Discover great products recommended by people you trust. 
-                                    Connect with sellers, ask questions, and enjoy a seamless shopping experience.</p>
-                            </div>
-                            <div class="btn-wraper flex flex-wrap gap-[10px] mobile:flex-row flex-col *:w-[100%] *:p-[15px_17px] *:rounded-[5px] *:flex-1 *:text-center items-center flex-wrap">
-                                <a href="./signup-as.html" class="text-[#ffffff] bg-color5">Start Shopping Now</a>
-                                <a href="javascript:void(0)" class="text-color5 bg-[#ffffff]">Learn More</a>
-                            </div>
-                        </div>
+                        <img src="./assets/images/our-mission.png" alt="our mission">
                     </div>
                 </div>
             </div>
@@ -214,7 +123,7 @@
             <div class="container-1440">
                 <div class="contact-us-wraper flex flex-col md:flex-row">
                     <div class="img-part flex-1">
-                        <img src="./assets/images/contact-us.png" alt="section-image">
+                        <img src="./assets/images/contact-us.png" alt="contact-us">
                     </div>
                     <div class="right-part bg-color10 flex-1 p-[24px]">
                         <div class="text-part max-w-[464px] mx-auto h-[100%] flex flex-col gap-[24px] justify-around">
