landing page done

--- a/buyer.html
+++ b/buyer.html
@@ -73,7 +73,7 @@
             <div class="container-1440">
                 <div class="earn-commissions -wraper flex flex-col md:flex-row">
                     <div class="img-part flex-1">
-                        <img src="./assets/images/seller.png" alt="section-image">
+                        <img src="./assets/images/buyer-main.png" alt="section-image">
                     </div>
                     <div class="right-part bg-color10 flex-1 p-[24px]">
                         <div class="text-part max-w-[464px] mx-auto h-[100%] flex flex-col gap-[24px] justify-around">
